Updated packages and fixed css collision on div .wrap in blocks.css

--- a/sass/blocks/blocks.scss
+++ b/sass/blocks/blocks.scss
@@ -94,7 +94,7 @@ div .wrap, h2 .wrap {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  display: block !important;
+  display: block;
   content: "";
 }
 
